feat: add sticker support
fix: swagger docs
